# tg_eye

./: .gitignore  README.md  build_td.bat  force_static_runtime_td.ps1  premake5.lua  status.sh
src/app/: db.cpp  db.hpp  description.lua  main.cpp  overloaded.hpp  tg.hpp  tg_client.cpp  tg_client.hpp  tg_client.ipp  tg_eye_client.cpp  tg_eye_client.hpp
stats/: .gitignore  Cargo.toml  readme.md
stats/src/: main.rs
stats/src/entities/: mod.rs  prelude.rs  user_info.rs  user_status.rs
